domain_name_config/update ingress.yaml
# I will update this in the future to include my domain name and certificate and ssl encryption in the future

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-north-1:590183919160:certificate/3f05f383-36e1-4b11-8520-c51a378d9631
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "HTTPS"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
spec:
  rules:
    - host: stockpnl.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 443
  tls:
    - hosts:
        - stockpnl.com
